[package]
name = "wasm_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = { version = "=0.8.7" }
getrandom = { version = "0.2", features = ["js"] }
specs = "0.17"
specs-derive = "0.4.1"

[patch.crates-io]
bracket-lib = { git = "https://github.com/amethyst/bracket-lib.git", rev = "851f6f08" }

[profile.dev]
opt-level = 1
